# tensorflow-recipes

./: README.md  setup.cfg
AlphaGo/: README.md  get_data.sh  go_db.py  tfgo.py  train.py
AlphaGo/data/: incorrect_sgf_files.txt  reader.py  verify.py  verify_nextmove.py
AlphaGo/docs/: FILEFORMAT.md
AlphaGo/go_engine/: __init__.py  goplanes.py
ComputationalPhotography/: README.md  learning_to_see_in_the_dark.py  prepare_sony.py  sony_dataset.py
DeepVideoDeblurring/: deepvideo-deblurring.py  psf.py
DynamicFilterNetwork/: steering-filter.py
EnhanceNet/: README.md  data_sampler.py
FaceRecognition/: ssh.py  wider_face.py
ImageRestorationSymmetricSkip/: rednet.py
LearningToSeeInTheDark/: README.md  learning_to_see_in_the_dark.py  prepare_sony.py  sony_dataset.py
LetThereBeColor/: README.md  let_there_be_color.py
OpticalFlow/: README.md  flownet2.py  flownet2s.py  flownet_models.py  models.py  pwc.py
OpticalFlow/user_ops/: .gitignore  CMakeLists.txt  FindTensorFlow.cmake  __init__.py  benchmark_correlation.py  forward.npy  test_correlation.py
OpticalFlow/user_ops/kernels/: correlation_cost_kernel.cc  correlation_cost_kernel.cu  correlation_cost_op.cc  correlation_cost_op.h  correlation_kernel.cc  correlation_kernel.cu  correlation_op.cc  correlation_op.h
OpticalFlow/user_ops/ops/: correlation.cc  correlation_cost.cc
PointNet/: pointnet.py
ProgressiveGrowingGan/: README.md  conv2d.py  convert_to_lmdb.py  pgan.py
SplitBrainAutoEncoder/: splitbrain-autoencoder.py
SubPixelSuperResolution/: README.md  data_sampler.py  realtime_superresolution.py
(+27 files in other folders)
